# AI-Agent

./: .gitignore  ARCHITECTURE_REVIEW.md  README.md  bugs.md  engine-notes.md  merged.md  pyproject.toml  test_agent.txt  world-summary.md
agent/: __init__.py  action_loop.py  cli.py  defaults.py  llm.py  loop.py  models.py  mvp.py  ports.py  providers.py  replanner.py  self_development.py
computer/: __init__.py  apps.py  audio.py  browser.py  clipboard.py  environment.py  errors.py  files.py  git.py  keyboard.py  models.py  mouse.py  network.py  ocr.py  packages.py  ports.py  processes.py  python.py  registry.py  runner.py  screen.py  services.py  system.py  terminal.py  ui.py  unsupported.py  vision.py  windows.py
docs/: agent-loop-validation-report.md  architecture.md  production-like-agent-validation-report.md  release-0.1.md  validation-v0.1-report.md  validation.md
evaluations/: __init__.py  last-agent-cli-trace.json  last-agent-loop-validation-report.json  last-production-like-agent-report.json  last-validation-report.json  last-validation-summary.md  run_agent_loop_validation.py  run_production_like_agent_validation.py  run_validation.py
examples/: ai_agent_validation.py  notepad_hello_runtime.py  self_development_loop.py
memory/: __init__.py  models.py  sqlite.py
runtime/: __init__.py  container.py  errors.py  executor.py  history.py  logging.py  models.py  sandbox.py  sdk.py
tasks/: current.md
tests/: test_action_agent_loop.py  test_action_runtime.py  test_agent_cli_mvp.py  test_computer.py  test_computer_ui_runtime.py  test_development_actions.py  (+10 more)
(+43 files in other folders)
